--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </nav>
     
 
-   <div class="button-container" data-name="Login">
-      <button type="button" class="btn btn-outline-primary">Login</button>
-      <button type="button" class="btn btn-primary">Entrar</button>
-  </div>
+    <div class="button-container" data-name="Login">
+        <button type="submit" name="continue" class="btn btn-primary">Login</button>
+        <button type="button" name="continue" class="btn btn-secondary">Clear</button>
+    </div>
 </header>
 
 <body>
