--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="button-container" data-name="Login">
         <button type="submit" name="continue" class="btn btn-primary">Login</button>
-        <button type="button" name="continue" class="btn btn-secondary">Clear</button>
+        <button type="button" name="continue" class="btn btn-secondary">Entrar</button>
     </div>
 </header>
 
@@ -293,7 +293,19 @@
   </div>
 
 </section>
-      
+      <div class="ul2">
+  <div class="li2"> 
+<ul>
+  <li>MODELOS</li>
+  <li>CLA 250 2023</li>
+  <li>GLE 400 d 4MATIC Coupé - BTR 2022</li>
+  <li>GLA 200 AMG Line - BRX 2022</li>
+  <li>GLS 450 4MATIC - BRM 2022</li>
+  <li>A 250 2023</li>
+</ul>
+  </div>
+</div>
+     
 <footer class="main-footer">
   <div class="main-container">
     <div class="main-footer__upper">
